--- a/client/src/styles/Password.scss
+++ b/client/src/styles/Password.scss
@@ -32,6 +32,7 @@
       flex: 1;
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
+      font-size: 1rem; // below 16px zooms on mobile
 
       &:focus {
         border: 2px $justfix-black solid;
